// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TicketInput snapshots initial open state 1`] = `
"                                                            
                                                            
                                                            
     ╭────────────────────────────────────────────────╮     
     │                                                │     
     │ Add Ticket                                     │     
     │                                                │     
     │ Ticket                                         │     
     │ ╭────────────────────────────────────────────╮ │     
     │ │ AM-123 or paste Jira URL                   │ │     
     │ ╰────────────────────────────────────────────╯ │     
     │                                                │     
     │ ┌────────────────────────────────────────────┐ │     
     │ │Agent                                       │ │     
     │ │                                            │ │     
     │ │[*] OpenCode  [ ] Claude Code               │ │     
     │ └────────────────────────────────────────────┘ │     
     │                                                │     
     │                       Cancel      Add Ticket   │     
     │                                                │     
     ╰────────────────────────────────────────────────╯     
                                                            
                                                            
                                                            
"
`;

exports[`TicketInput snapshots after entering edit mode 1`] = `
"                                                            
                                                            
                                                            
     ╭────────────────────────────────────────────────╮     
     │                                                │     
     │ Add Ticket                                     │     
     │                                                │     
     │ Ticket                                         │     
     │ ╭────────────────────────────────────────────╮ │     
     │ │ AM-123 or paste Jira URL_                  │ │     
     │ ╰────────────────────────────────────────────╯ │     
     │                                                │     
     │ ┌────────────────────────────────────────────┐ │     
     │ │Agent                                       │ │     
     │ │                                            │ │     
     │ │[*] OpenCode  [ ] Claude Code               │ │     
     │ └────────────────────────────────────────────┘ │     
     │                                                │     
     │                       Cancel      Add Ticket   │     
     │                                                │     
     ╰────────────────────────────────────────────────╯     
                                                            
                                                            
                                                            
"
`;

exports[`TicketInput snapshots after typing a valid key 1`] = `
"                                                            
                                                            
                                                            
     ╭────────────────────────────────────────────────╮     
     │                                                │     
     │ Add Ticket                                     │     
     │                                                │     
     │ Ticket                                         │     
     │ ╭────────────────────────────────────────────╮ │     
     │ │ am-123_                                    │ │     
     │ ╰────────────────────────────────────────────╯ │     
     │ Key: AM-123                                    │     
     │ ┌────────────────────────────────────────────┐ │     
     │ │Agent                                       │ │     
     │ │                                            │ │     
     │ │[*] OpenCode  [ ] Claude Code               │ │     
     │ └────────────────────────────────────────────┘ │     
     │                                                │     
     │                       Cancel      Add Ticket   │     
     │                                                │     
     ╰────────────────────────────────────────────────╯     
                                                            
                                                            
                                                            
"
`;

exports[`TicketInput snapshots closed state 1`] = `
"                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;
